@@ -5,7 +5,7 @@ desktop_in_files = flumotion-admin.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 
 pixmapdir = $(datadir)/pixmaps
-pixmap_DATA = flumotion.png
+pixmap_DATA = image/flumotion.png
 
 xsldir = $(pkgdatadir)
 xsl_DATA = upgrade-to-0.2.0.xsl upgrade-to-0.3.2.xsl upgrade-to-0.4.1.xsl
